--- a/generators/gokit/logging/logging.body.tmpl
+++ b/generators/gokit/logging/logging.body.tmpl
@@ -1,19 +1,21 @@
 {{- define "body"}}
 {{- $method := get . "Method" }}
 {{- $middlewareName := get . "MiddlewareName" }}
-{{- $inputArgs := FieldNames $method.InputArgs | join ", " }}
-{{- $outputArgs := FieldNames $method.OutputArgs | join ", " }}
+{{- $namedInputArgs := FieldsAutoName $method.InputArgs "input" }}
+{{- $inputNameList := FieldNames $namedInputArgs | join ", " }}
+{{- $namedOutputArgs := FieldsAutoName $method.OutputArgs "output" }}
+{{- $outputNameList := FieldNames $namedOutputArgs | join ", " }}
 func (mw {{$middlewareName}}) {{MethodSignature $method}} {
 
   defer func(begin time.Time) {
-		mw.logger.Log(
+		_ = mw.logger.Log(
 			"method", "{{$method.Name}}",
-			"output", fmt.Sprintf("%v", []interface{}{ {{$outputArgs}} }),
+			"output", fmt.Sprintf("%v", []interface{}{ {{$outputNameList}} }),
 			"took", time.Since(begin),
 		)
 	}(time.Now())
 
-	{{$outputArgs}} = mw.next.{{$method.Name}}({{$inputArgs}})
+	{{$outputNameList}} = mw.next.{{$method.Name}}({{$inputNameList}})
 
 	return
 }
