--- a/generators/gokit/logging/logging.header.tmpl
+++ b/generators/gokit/logging/logging.header.tmpl
@@ -13,7 +13,7 @@ import (
 )
 
 type {{$middlewareName}} struct {
-  logger log.Logger
-  next   {{$interface.Name}}
+  Logger log.Logger
+  Next   {{$interface.Name}}
 }
 {{ end }}
