--- a/generators/gokit/logging/logging.body.tmpl
+++ b/generators/gokit/logging/logging.body.tmpl
@@ -1,9 +1,9 @@
 {{- define "body"}}
 {{- $method := get . "Method" }}
 {{- $middlewareName := get . "MiddlewareName" }}
-{{- $namedInputArgs := FieldsAutoName $method.InputArgs "input" }}
+{{- $namedInputArgs := $method.InputArgs | autoname "input" 0 }}
 {{- $inputNameList := FieldNames $namedInputArgs | join ", " }}
-{{- $namedOutputArgs := FieldsAutoName $method.OutputArgs "output" }}
+{{- $namedOutputArgs := $method.OutputArgs | autoname "output" 0 }}
 {{- $outputNameList := FieldNames $namedOutputArgs | join ", " }}
 func (mw {{$middlewareName}}) {{MethodSignature $method}} {
 
