--- a/generators/gokit/http/http.header.tmpl
+++ b/generators/gokit/http/http.header.tmpl
@@ -7,9 +7,7 @@ import (
   "context"
   "encoding/json"
   "net/http"
-  "os"
 
-  "github.com/go-kit/kit/log"
-  httptransport "github.com/go-kit/kit/transport/http"
+  "github.com/gorilla/mux"
 )
 {{- end }}
