--- a/generators/gokit/http/http.tmpl
+++ b/generators/gokit/http/http.tmpl
@@ -8,4 +8,4 @@
 {{-     end }}
 {{-     template "body" (dict "Interface" $interface "Method" $method) }}
 {{- end }}
-{{/*{{- template "footer" $interface }}*/}}
+{{- template "footer" $interface }}
